--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,162 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
+* {
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+}
+
 .App {
+  width: 100%;
+  height: 100vh;
+  background-color: #000000;
+}
+h1 {
+  color: #ffffff;
+}
+.logo img {
+  display: block;
+  margin: auto;
+  width: 250px;
+  padding: 20px;
+}
+.container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+.content {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-title {
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  font-size: 60px;
+  white-space: pre-line;
+  text-transform: capitalize;
+  font-weight: 600;
+  line-height: 70px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sub-title {
+  color: #ffffff;
+  opacity: 0.8;
+  font-size: 20px;
+  margin-top: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.contact-details {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.contact-containetr {
+  background-color: #121212;
+  width: 30%;
+  height: 150px;
+  margin: 15px;
+  padding: 20px 20px 20px 30px;
+  text-align: start;
+  /* box-shadow: 1px 1px 10px #1d1d1d; */
+  margin-top: 50px;
+}
+.contact-containetr h1 {
+  font-weight: 500;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.iconss a {
+  color: #ffffff;
+  opacity: 0.7;
+  font-size: 15px;
+  line-height: 25px;
+  font-family: "Poppins", sans-serif;
+  /* white-space: pre-line; */
+}
+.iconss {
+  color: #eeeeee;
+  display: grid;
+  grid-row: 2;
+  align-items: center;
+  grid-template-columns: 10% 90%;
+  margin: 5px 0;
+}
+.iconss svg {
+  font-size: 20px;
+}
+.icons svg {
+  color: #ffffff;
+  opacity: 0.7;
+  font-size: 27px;
+  margin: 10px 20px;
+  transition: 0.2s ease;
+}
+.icons svg:first-child {
+  margin-left: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 600px) {
+  .content {
+    max-width: 90%;
+    margin: auto;
+    text-align: start;
+    margin-top: 20px;
   }
-  to {
-    transform: rotate(360deg);
+  .main-title {
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 37px;
+  }
+  .sub-title {
+    color: #ffffff;
+    opacity: 0.8;
+    font-size: 17px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    white-space: pre-line;
+  }
+  .App {
+    width: 100%;
+    height: auto;
+    background-color: #000000;
+  }
+  .contact-details {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .contact-containetr {
+    background-color: #121212;
+    width: 100%;
+    height: 150px;
+    margin: 15px 0;
+    padding: 20px;
+    text-align: start;
+  }
+  .contact-containetr h1 {
+    font-size: 22px;
+  }
+  .iconss a {
+    color: #ffffff;
+    opacity: 0.7;
+    font-size: 14px;
+    line-height: 25px;
+    font-family: "Poppins", sans-serif;
+    /* white-space: pre-line; */
+  }
+  .icons svg {
+    color: #ffffff;
+    opacity: 0.7;
+    font-size: 22px;
+    margin: 10px 20px;
+    transition: 0.2s ease;
   }
 }
