--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ h1 {
 .sub-title {
   color: #ffffff;
   opacity: 0.8;
-  font-size: 20px;
+  font-size: 25px;
   margin-top: 10px;
 }
 .contact-details {
@@ -129,7 +129,7 @@ h1 {
   .contact-details {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
   }
